# ffmepg_audio_tutorial

./: 0_hello_ffmpeg.cpp  1_decode_audio.cpp  2_encoder_audio.cpp  3_decode_with_callback.cpp  4_print_codec_and_formats.cpp  5_encode_audio_with_callback.cpp  CMakeLists.txt  byte_stream.h  testing_file_byte_stream.h
cmake/: FindFFMPEG.cmake
